Создано с помощью Colaboratory

--- a/Balakina_pyda36_DZ5_1.ipynb
+++ b/Balakina_pyda36_DZ5_1.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPjR9qpJaFh+S9oUL4YAyOX",
+      "authorship_tag": "ABX9TyMBfJXmvlRmMjB0pyUEfbwY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +45,7 @@
       "metadata": {
         "id": "2ZkR7q3Yq2iA"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -59,24 +58,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fKRBiHdML9Ko",
-        "outputId": "73aad3c6-8837-47f5-e8c6-75a89e9ee0d9"
+        "outputId": "704682a4-776a-46de-e8df-368876d5bb15"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2022-08-30 08:31:21--  https://u.netology.ngcdn.ru/backend/uploads/lms/attachments/files/data/13569/Downloads.zip\n",
-            "Resolving u.netology.ngcdn.ru (u.netology.ngcdn.ru)... 104.20.157.54, 104.20.156.54, 2606:4700:10::6814:9c36, ...\n",
+            "--2023-03-05 19:55:01--  https://u.netology.ngcdn.ru/backend/uploads/lms/attachments/files/data/13569/Downloads.zip\n",
+            "Resolving u.netology.ngcdn.ru (u.netology.ngcdn.ru)... 104.20.157.54, 104.20.156.54, 2606:4700:10::6814:9d36, ...\n",
             "Connecting to u.netology.ngcdn.ru (u.netology.ngcdn.ru)|104.20.157.54|:443... connected.\n",
+            "HTTP request sent, awaiting response... 301 Moved Permanently\n",
+            "Location: https://u.netology.ru/backend/uploads/lms/attachments/files/data/13569/Downloads.zip [following]\n",
+            "--2023-03-05 19:55:01--  https://u.netology.ru/backend/uploads/lms/attachments/files/data/13569/Downloads.zip\n",
+            "Resolving u.netology.ru (u.netology.ru)... 213.180.193.247, 2a02:6b8::1da\n",
+            "Connecting to u.netology.ru (u.netology.ru)|213.180.193.247|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 2041242 (1.9M) [application/x-zip-compressed]\n",
             "Saving to: ‘Downloads.zip’\n",
             "\n",
-            "Downloads.zip       100%[===================>]   1.95M  3.02MB/s    in 0.6s    \n",
+            "Downloads.zip       100%[===================>]   1.95M  6.96MB/s    in 0.3s    \n",
             "\n",
-            "2022-08-30 08:31:22 (3.02 MB/s) - ‘Downloads.zip’ saved [2041242/2041242]\n",
+            "2023-03-05 19:55:01 (6.96 MB/s) - ‘Downloads.zip’ saved [2041242/2041242]\n",
             "\n"
           ]
         }
@@ -90,7 +94,7 @@
       "metadata": {
         "id": "KPiSLrgGMqml"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -102,12 +106,12 @@
       "metadata": {
         "id": "mQFA1A2uMuQm"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "okN-ja68wtNJ"
       },
@@ -146,12 +150,25 @@
       "metadata": {
         "id": "fERRdOokNac3"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "import time"
+      ],
+      "metadata": {
+        "id": "diY83A_gSy35"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Это самый быстрый вариант\n",
+        "%%time\n",
         "purchases=my_dict() # Это вызов ф-ии my_dict(), См. выше, которая и формирует наш словарь\n",
         "with open('visit_log.csv','r', encoding = 'utf-8') as f1:\n",
         "    with open ('funnel.csv', 'w', encoding = 'utf-8') as f2:\n",
@@ -169,21 +186,23 @@
         "              \n"
       ],
       "metadata": {
-        "id": "Luig64sC5XcI"
+        "id": "Luig64sC5XcI",
+        "outputId": "2b3fcba1-96d8-484f-8aee-aeef4a6a65be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import time"
-      ],
-      "metadata": {
-        "id": "diY83A_gSy35"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 651 ms, sys: 22.5 ms, total: 673 ms\n",
+            "Wall time: 669 ms\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -197,7 +216,7 @@
         "        for line in f1:\n",
         "            line = line.strip()\n",
         "            user_id=line.split(',')[0] # Сразу распаковываем строку, \n",
-        "            # по разделителю будет 2 переменных, наи нужна одна - user_id, \n",
+        "            # по разделителю будет 2 переменных, нам нужна одна - user_id, \n",
         "            # которая будет использоваться в качестве ключа\n",
         "            if purchases.get(user_id):  # Если в словаре есть значение, соответствующее ключу user_id\n",
         "                f2.write(line + ',' + purchases[user_id] + '\\n') "
@@ -207,16 +226,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WkDVHS1GQlle",
-        "outputId": "b699cfc0-f818-4e75-c697-fc6062162b81"
+        "outputId": "f6f02513-0b50-443e-8e9f-2c40b6dc4cf3"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 538 ms, sys: 22.1 ms, total: 560 ms\n",
-            "Wall time: 552 ms\n"
+            "CPU times: user 931 ms, sys: 31.2 ms, total: 962 ms\n",
+            "Wall time: 995 ms\n"
           ]
         }
       ]
@@ -243,16 +262,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2jNflxk4S54z",
-        "outputId": "1adca576-d0b7-47b7-cbf3-0731b34e62b3"
+        "outputId": "d9e6ed3f-7807-4922-c697-f760e715d78e"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 498 ms, sys: 17.2 ms, total: 515 ms\n",
-            "Wall time: 515 ms\n"
+            "CPU times: user 1.18 s, sys: 27.3 ms, total: 1.2 s\n",
+            "Wall time: 1.23 s\n"
           ]
         }
       ]
@@ -270,9 +289,9 @@
           "height": 363
         },
         "id": "vvDhEdYKEoqJ",
-        "outputId": "08f9ecf1-9bcf-46f0-92c4-356d10efaa1c"
+        "outputId": "abd0e975-d9bd-4e36-9028-2dc1106542e5"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -292,7 +311,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c07e4f9a-3b2d-4295-b119-32048f5c0735\">\n",
+              "  <div id=\"df-d23ed886-d8e1-4661-aacc-70aa746cce00\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -381,7 +400,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c07e4f9a-3b2d-4295-b119-32048f5c0735')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d23ed886-d8e1-4661-aacc-70aa746cce00')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -432,12 +451,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c07e4f9a-3b2d-4295-b119-32048f5c0735 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d23ed886-d8e1-4661-aacc-70aa746cce00 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c07e4f9a-3b2d-4295-b119-32048f5c0735');\n",
+              "          const element = document.querySelector('#df-d23ed886-d8e1-4661-aacc-70aa746cce00');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -460,7 +479,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 12
         }
       ]
     }
