Создано с помощью Colaboratory

--- a/Balakina_pyda36_DZ5_1.ipynb
+++ b/Balakina_pyda36_DZ5_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBfJXmvlRmMjB0pyUEfbwY",
+      "authorship_tag": "ABX9TyP2ELAIV1UhPPb4JHjjeriK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,37 +54,10 @@
         "!wget -O \"Downloads.zip\" \"https://u.netology.ngcdn.ru/backend/uploads/lms/attachments/files/data/13569/Downloads.zip\""
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fKRBiHdML9Ko",
-        "outputId": "704682a4-776a-46de-e8df-368876d5bb15"
+        "id": "fKRBiHdML9Ko"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2023-03-05 19:55:01--  https://u.netology.ngcdn.ru/backend/uploads/lms/attachments/files/data/13569/Downloads.zip\n",
-            "Resolving u.netology.ngcdn.ru (u.netology.ngcdn.ru)... 104.20.157.54, 104.20.156.54, 2606:4700:10::6814:9d36, ...\n",
-            "Connecting to u.netology.ngcdn.ru (u.netology.ngcdn.ru)|104.20.157.54|:443... connected.\n",
-            "HTTP request sent, awaiting response... 301 Moved Permanently\n",
-            "Location: https://u.netology.ru/backend/uploads/lms/attachments/files/data/13569/Downloads.zip [following]\n",
-            "--2023-03-05 19:55:01--  https://u.netology.ru/backend/uploads/lms/attachments/files/data/13569/Downloads.zip\n",
-            "Resolving u.netology.ru (u.netology.ru)... 213.180.193.247, 2a02:6b8::1da\n",
-            "Connecting to u.netology.ru (u.netology.ru)|213.180.193.247|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 2041242 (1.9M) [application/x-zip-compressed]\n",
-            "Saving to: ‘Downloads.zip’\n",
-            "\n",
-            "Downloads.zip       100%[===================>]   1.95M  6.96MB/s    in 0.3s    \n",
-            "\n",
-            "2023-03-05 19:55:01 (6.96 MB/s) - ‘Downloads.zip’ saved [2041242/2041242]\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -133,6 +106,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "purchases = my_dict()"
+      ],
+      "metadata": {
+        "id": "Vp40uX6hXPqq"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "2. Для каждого user_id в файле visit_log.csv определите третий столбец с категорией покупки (если покупка была, сам файл visit_log.csv изменять не надо). Запишите в файл funnel.csv визиты из файла visit_log.csv, в которых были покупки с указанием категории."
@@ -172,25 +156,34 @@
         "purchases=my_dict() # Это вызов ф-ии my_dict(), См. выше, которая и формирует наш словарь\n",
         "with open('visit_log.csv','r', encoding = 'utf-8') as f1:\n",
         "    with open ('funnel.csv', 'w', encoding = 'utf-8') as f2:\n",
-        "        my_line = f1.readline().strip() + ',category \\n' # \n",
+        "\n",
         "        # Читаем в переменную my_line только 1-ю строку для того, чтобы сформировать заголовок \n",
         "        # будущего файла funnel.csv. Формируем 1-ю строку-заголовок для файла \n",
         "        # funnel.csv с помощью добавки в исходный заголовок ',category' и \n",
         "        # символа переноса строки /n\n",
+        "        my_line = f1.readline().strip() + ',category \\n'  \n",
+        "   \n",
         "        f2.write(my_line) # пишем заголовок в файл\n",
+        "        \n",
         "        for line in f1: # перебираем все остальные строки файла 'visit_log.csv' \n",
         "            line = line.strip() # убираем пробелы\n",
-        "            visit=line.split(',') # разделяем на слова . Фактически это ключи( visit[0]) и значения (visit[1]). Делаем strip и split отдельно, т.к. line нам еще понадобится\n",
+        "            # разделяем строки на слова . \n",
+        "            # Фактически это ключи( visit[0]) и значения (visit[1]). \n",
+        "            # Делаем strip и split отдельно, т.к. line нам еще понадобится\n",
+        "            visit=line.split(',') \n",
+        "\n",
         "            if purchases.get(visit[0]): # если в словаре purchases есть значение, соответствующее ключу visit[0]\n",
-        "                f2.write(line + ',' + purchases[visit[0]] + '\\n') # то записываем в файл f2 строку line из f1 c добавлением значения из словаря purchases и символа переноса строки\n",
+        "                # записываем в файл f2 строку line из f1 c добавлением значения \n",
+        "                # из словаря purchases и символа переноса строки\n",
+        "                f2.write(line + ',' + purchases[visit[0]] + '\\n') \n",
         "              \n"
       ],
       "metadata": {
         "id": "Luig64sC5XcI",
-        "outputId": "2b3fcba1-96d8-484f-8aee-aeef4a6a65be",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2b3fcba1-96d8-484f-8aee-aeef4a6a65be"
       },
       "execution_count": 8,
       "outputs": [
