--- a/Balakina_pyda36_DZ1.ipynb
+++ b/Balakina_pyda36_DZ1.ipynb
@@ -4,8 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOpJ9i5fq+iWYl8FovwAeQv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +37,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Задание 1. \n",
+        "# Задание 1.\n",
         "Даны 2 переменных, в которых хранятся строки произвольной длины: phrase_1 и phrase_2.\n",
         "Напишите код, который проверяет какая из этих строк длиннее.\n",
         "\n",
@@ -77,8 +75,8 @@
         }
       ],
       "source": [
-        "phrase_1, phrase_2 = input(), input()\n",
-        "l1,l2 = len(phrase_1), len(phrase_2)\n",
+        "phrase_1, phrase_2 = input(), input() # Ввод с экрана 2 переменных\n",
+        "l1,l2 = len(phrase_1), len(phrase_2) # определяем длину и сохраняем в переменных\n",
         "if l1> l2:\n",
         "  print('Фраза 1 длиннее фразы 2')\n",
         "elif l1<l2:\n",
@@ -163,12 +161,14 @@
         "month_borders=[[12,1],[1,2],[2,3], [3,4],[4,5],[5,6],[6,7],[7,8],[8,9],[9,10],[10,11],[11,12]]\n",
         "day_borders=[[22,20],[21,18],[19,20],[21,20],[21,21],[22,21],[22,22],[23,23],[24,22],[23,23],[24,22],[23,21]]\n",
         "zodiac=['Козерог', 'Водолей', 'Рыбы','Овен', 'Телец', 'Близнецы', 'Рак', 'Лев', 'Дева', 'Весы','Скорпион', 'Стрелец']\n",
-        "my_day = int(input('Введите день: '))\n",
-        "my_month = monthes.index(input('Введите месяц: ').lower())\n",
-        "for _ in range(12):\n",
+        "my_day = int(input('Введите день: ')) # вводим день и переводим в целочисленный тип\n",
+        "my_month = monthes.index(input('Введите месяц: ').lower()) # вводим месяц - строку, переводим в нижний регистр, находим в массиве месяцев этот элемент и возвращаем индекс\n",
+        "my_date = date(2022, my_month, my_day)\n",
+        "for _ in range(12): # для каждого значения из диапазона от 0 до 11\n",
+        "    # находим верхнюю и нижнюю границы для каждого знака зодиака для указанного года\n",
         "    date_min = date(2022, month_borders[_][0], day_borders[_][0])\n",
         "    date_max = date(2022, month_borders[_][1], day_borders[_][1])\n",
-        "    my_date = date(2022, my_month, my_day)\n",
+        "    # Если моя дата попадает в этот диапазон - выводим знак\n",
         "    if date_min <= my_date <= date_max:\n",
         "        print('Ваш знак зодиака:', zodiac[_+1])"
       ],
@@ -276,6 +276,7 @@
         "#print(('Несчастливый билет','Счастливый билет' )[sum([number % 10,number//10 %10,number //100 %10]) == sum([number//1000 % 10,number//10000 %10,number //100000 %10])])\n",
         "\n",
         "#print(('Несчастливый билет','Счастливый билет' )[sum([number//10**i % 10 for i in range(3)]) == sum([number//10**i % 10 for i in range(3,6)])])\n",
+        "# самый крутой код с использованием целочисленного деления и перебора в диапазоне\n",
         "print('Счастливый билет' if (sum([number//10**i % 10 for i in range(3)]) == sum([number//10**i % 10 for i in range(3,6)])) else 'Несчастливый билет' )"
       ],
       "metadata": {
